// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render category links 1`] = `
<div>
  <p>
    <span
      className="inline-block w-19"
    >
      Country:
    </span>
     
    <span
      className="font-bold"
    >
      <a
        className="border-b border-current hover:opacity-50 transition-opacity"
        href="/country/British"
        onClick={[Function]}
      >
        British
      </a>
    </span>
  </p>
  <p>
    <span
      className="inline-block w-19"
    >
      Category:
    </span>
     
    <span
      className="font-bold"
    >
      <a
        className="border-b border-current hover:opacity-50 transition-opacity"
        href="/category/Breakfast"
        onClick={[Function]}
      >
        Breakfast
      </a>
    </span>
  </p>
</div>
`;

exports[`should render category links without country origin 1`] = `
<div>
  <p>
    <span
      className="inline-block w-19"
    >
      Country:
    </span>
     
    <span
      className="font-bold"
    >
      Origin not establish
    </span>
  </p>
  <p>
    <span
      className="inline-block w-19"
    >
      Category:
    </span>
     
    <span
      className="font-bold"
    >
      <a
        className="border-b border-current hover:opacity-50 transition-opacity"
        href="/category/Breakfast"
        onClick={[Function]}
      >
        Breakfast
      </a>
    </span>
  </p>
</div>
`;
